@@ -1,6 +1,7 @@
 package com.dadumserver.common.config;
 
 import com.dadumserver.common.util.JwtTokenProvider;
+import com.dadumserver.user.domain.model.Role;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -8,6 +9,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -15,6 +17,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Component
@@ -38,8 +41,13 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
       if (jwtTokenProvider.validateAccessToken(token)) {
         UUID userId = jwtTokenProvider.getUserId(token);
+        Role role = jwtTokenProvider.getUserRole(token);
         UsernamePasswordAuthenticationToken authentication =
-            new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
+            new UsernamePasswordAuthenticationToken(
+                userId,
+                null,
+                role == null ? Collections.emptyList() : List.of(new SimpleGrantedAuthority(role.name()))
+            );
         authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
         SecurityContextHolder.getContext().setAuthentication(authentication);
       }
